Revision history for DBIx::Class

0.08099_07 2009-02-27 02:00:00 (UTC)
        - multi-create using find_or_create rather than _related for post-insert
        - fix get_inflated_columns to check has_column_loaded
        - Add DBIC_MULTICREATE_DEBUG env var (undocumented, quasi-internal)
        - Fix up multi-create to:
          - correctly propagate columns loaded during multi-insert of rels
          - not try and insert things tagged on via new_related unless required
        - Possible to set locale in IC::DateTime extra => {} config
        - Calling the accessor of a belongs_to when the foreign_key
          was NULL and the row was not stored would unexpectedly fail 
        - Split sql statements for deploy only if SQLT::Producer returned a scalar
          containing all statements to be executed
        - Add as_query() for ResultSet and ResultSetColumn. This makes subqueries
          possible. See the Cookbook for details. (robkinyon, michaelr)
        - Massive rewrite of Ordered to properly handle position constraints and
          to make it more matpath-friendly
        - deploy_statements called ddl_filename with the $version and $dir arguments
          in the wrong order. 
        - columns/+columns attributes now support { as => select } hahsrefs
        - support for views both in DBIC and via deploy() in SQLT

0.08099_06 2009-01-23 07:30:00 (UTC)
        - Allow a scalarref to be supplied to the 'from' resultset attribute
        - Classes submitted as result_class for a resultsource are now
          automatically loaded via ensure_loaded()
        - 'result_class' resultset attribute, identical to result_class()
        - add 'undef_on_null_fk' option for relationship accessors of type 'single'.
          This will prevent DBIC from querying the database if one or more of
          the key columns IS NULL
        - for 'belongs_to' rels, 'undef_on_null_fk' defaults to true.
        - fixed scope unaware last_insert_id fetching for MSSQL